# CircuitPython_TLV320AIC3204

./: README.rst  pyproject.toml  relic_tlv320aic3204.py  requirements.txt  tlv320aic3204.py
.github/workflows/: release_gh.yml
docs/: api.rst  conf.py  examples.rst  index.rst
examples/: tlv320aic3204_adc_input.py  tlv320aic3204_bidirectional.py  tlv320aic3204_biquad.py  tlv320aic3204_input.py  tlv320aic3204_passthrough.py  tlv320aic3204_simpletest.py
