# SPDX-FileCopyrightText: 2022 Alec Delaney, written for Adafruit Industries
# SPDX-FileCopyrightText: Copyright (c) 2026 Cooper Dalrymple
#
# SPDX-License-Identifier: MIT

[build-system]
requires = [
    "setuptools",
    "wheel",
    "setuptools-scm",
]

[project]
name = "circuitpython-tlv320aic3204"
description = "Driver library for the TLV320AIC3204 audio codec"
version = "0.0.0+auto.0"
readme = "README.rst"
authors = [
    {name = "Cooper Dalrymple", email = "me@dcdalrymple.com"}
]
urls = {Homepage = "https://github.com/relic-se/CircuitPython_TLV320AIC3204"}
keywords = [
    "adafruit",
    "blinka",
    "circuitpython",
    "micropython",
    "tlv320aic3204",
    "codec",
    "tlv320",
    "audio",
    "i2s",
]
license = "MIT"
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Embedded Systems",
    "Topic :: System :: Hardware",
    "Programming Language :: Python :: 3",
]
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools]
py-modules = ["relic_tlv320aic3204"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
optional-dependencies = {optional = {file = ["optional_requirements.txt"]}}
